@@ -1,3 +1,15 @@
+2010-07-08  John Abd-El-Malek  <jam@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        [V8] Navigation policy doesn't play nicely with pepper plugins
+        https://bugs.webkit.org/show_bug.cgi?id=41864
+
+        * bindings/v8/V8Utilities.cpp:
+        (WebCore::callingOrEnteredFrame):
+        (WebCore::shouldAllowNavigation):
+        (WebCore::navigateIfAllowed):
+
 2010-07-08  Jon Honeycutt  <jhoneycutt@apple.com>
 
         Missing plug-ins may cause an assertion failure.
